# RiMo---An-autonomous-AI-software

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py  security_helpers.py
backend/app/agents/: base.py  engineering.py  registry.py  strategy.py  tools.py
backend/app/api/: __init__.py  auth.py  events.py  intelligence.py  projects.py  resources.py
backend/app/core/: config.py  logging.py  ratelimit.py  security.py  trace.py
backend/app/db/: session.py
backend/app/integrations/: github.py
backend/app/memory/: global_memory.py  service.py
backend/app/models/: __init__.py  enums.py
backend/app/orchestration/: analyzer.py  benchmark.py  debate.py  event_bus.py  fleet.py  graph.py  improvement.py  orchestrator.py  product.py  refactor.py  research.py  swarm.py  utils.py  worker.py
backend/app/schemas/: __init__.py
backend/app/services/: economics.py  embeddings.py  llm.py  metrics.py  prompts.py  recovery.py  router.py  safety.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_intelligence.py  0003_refresh_tokens.py  0004_repositories.py
backend/scripts/: demo_crash_recovery.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_global_memory.py  test_intelligence.py  test_orchestrator.py  test_safety.py  test_worker_concurrency.py
docs/: architecture.md  database-schema.md  deployment.md  evidence.md  (+1 more)
(+36 files in other folders)
